[package]
name = "nsupdate_cloudflare"
version = "0.1.0"
authors = [ "Kay Lin <i@v2bv.net>" ]
edition = "2018"
description = "A simple yet dirty tool to apply nsupdate commands to CloudFlare DNS"
homepage = "https://github.com/RedL0tus/nsupdate_cloudflare"
repository = "https://github.com/RedL0tus/nsupdate_cloudflare"
keywords = [ "nsupdate", "cloudflare", "dns" ]
readme = "README.md"
license = "MIT"
categories = [ "command-line-utilities" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
clap = "3.0.0-beta.1"
pest = "^2.1"
surf = "2.0.0-alpha.2"
serde = { version = "^1.0", features = [ "derive" ] }
anyhow = "^1.0"
async-std = { version = "^1.5", features = [ "attributes" ] }
serde_json = "^1.0"
pest_derive = "^2.1"
pretty_env_logger = "^0.4"
